# kinescope-dl

./: .dockerignore  .gitignore  README.md  app.dockerfile  dev.dockerfile  kinescope-dl.py  kinescope-dl.spec  pyproject.toml  requirements.txt
kinescope/: __init__.py  downloader.py  exceptions.py  kinescope.py
kinescopedl/: __init__.py  __main__.py  const.py  downloader.py  exceptions.py  kinescope.py
kinescopedl/di/: __init__.py  core.py
