[tool.poetry]
name = "kinescopedl"
version = "0.2.2"
description = "Command-line program to download videos from Kinescope.io"
authors = ["Illia Chaban <ic-it@mail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
tqdm = "^4.66.1"
mpegdash = "^0.3.1"
typer = { version = "^0.9.0", extras = ["all"] }
rich = "^13.7.0"


[tool.poetry.group.dev.dependencies]
types-requests = "^2.31.0.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# CLI
[tool.poetry.scripts]
kinescopedl = "kinescopedl.__main__:app"

[tool.black]
line-length = 120

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
